tests/should_fail/fn_too_few_args.nv
module main

// SHOULD FAIL: function called with too few arguments
fn add(x: Int, y: Int) -> Int {
    return x + y
}
println(add(1))
